[project]
name = "gameplay-trajectory-canvas"
version = "0.1.0"
description = "Trajectory conditioning tracer (Streamlit)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "imageio>=2.33",
    "pyarrow>=14,<18",
    "streamlit>=1.28,<1.40",
    "streamlit-drawable-canvas>=0.9",
    "Pillow>=10.0",
]
